# zxic-ping

./: Cargo.toml  README.md  flake.nix  optimize_conn.sh  shell.nix
.cargo/: config.toml
.github/workflows/: build-zxic.yml
radvd-core/: Cargo.toml
radvd-core/src/: config.rs  constants.rs  error.rs  interface.rs  lib.rs  parser.rs  ra.rs  socket.rs  timer.rs  types.rs  util.rs
src/: main.rs  radvd.rs
