[package]
name = "zxic_ping"
version = "0.1.0"
edition = "2021"

[dependencies]
daemonize = "0.5"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
# Local crate
radvd-core = { path = "radvd-core" }
regex = "1"


[workspace]
members = ["radvd-core"]

[[bin]]
name = "zxic_ping"
path = "src/main.rs"
